--- a/contactus.html
+++ b/contactus.html
@@ -134,11 +134,11 @@ maharashtra |mumbai| pune| rajasthan| delhi| madhya pradesh| india">
 
 						<div class="collapse navbar-collapse" id="navbar-menu">
 							<ul id="nav" class="nav navbar-nav navbar-right">
-								<li><a href="index-3.html">Home</a></li>
+								<li><a href="index.html">Home</a></li>
 								<li><a href="aboutus.html">About Us</a> </li>
 								
 								<li> <a href="products.html">Products</a> </li>
-                                <li> <a href="glossy.html">Glossy</a> </li>
+                                <!-- <li> <a href="glossy.html">Glossy</a> </li> -->
 								<li> <a href="gallery.html">Gallery</a> </li>
                                
 								<li class="active"><a href="contactus.html">Contact</a></li><li><a href="moxiepens.html">Moxie Pens</a></li>
@@ -339,7 +339,7 @@ maharashtra |mumbai| pune| rajasthan| delhi| madhya pradesh| india">
 				<div class="row">
 					<div class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
 						<div class="footer-copyright text-center">
-							<p>&copy; 2018 <a href="#">ZEEO PENS</a> All Right Reserved. </p>
+							<p>&copy; 2020 <a href="#">ZEEO PENS</a> All Right Reserved. </p>
 						</div>
 					</div>
 				</div>
