--- a/productview1988.html
+++ b/productview1988.html
@@ -127,7 +127,7 @@ maharashtra |mumbai| pune| rajasthan| delhi| madhya pradesh| india">
 								<li><a href="aboutus.html">About Us</a> </li>
 								
 								<li> <a href="products.html">Products</a> </li>
-                                <li> <a href="glossy.html">Glossy</a> </li>
+                                <!-- <li> <a href="glossy.html">Glossy</a> </li> -->
 								<li> <a href="gallery.html">Gallery</a> </li>
                                
 								<li><a href="contactus.html">Contact</a></li><li><a href="moxiepens.html">Moxie Pens</a></li>
